# scale-inference-for-agents-on-eks-automode

./: .gitignore  LICENSE  MCP_ARCHITECTURE.md  README.md  architecture.mmd  presentation-guide.md
calendar-mcp-server/: Dockerfile  GOOGLE_CALENDAR_SETUP.md  README.md  main.py  main_google_calendar.py
calendar-mcp-server/k8s/: deployment.yaml  service.yaml
chat-ui/: Dockerfile  README.md  app.js  app.py  index.html  nginx.conf  requirements.txt  styles.css
chat-ui/.streamlit/: config.toml
chat-ui/k8s/: deployment.yaml  service.yaml
infra/: Ministral-3-8B-download-job.yaml  ebs-optimized-nodeclass.yaml  gpu-nodepool.yaml
ray-vllm/: ray-vllm-s3-service.yml  vllm-s3-configmap.yml
scripts/: build-and-push-ecr.sh  cognito-alb.sh  initialize_mock_data.py  setup_s3_bucket.sh
summitassistant-agent/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  iam-policy-bedrock.json  pyproject.toml  quick-start.sh  requirements.txt
summitassistant-agent/k8s/: configmap.yaml  deployment.yaml  service.yaml
summitassistant-agent/src/summitassistant/: __init__.py  agent.py  calendar_manager.py  llm_client.py  main.py  models.py  retry_manager.py  state_manager.py  storage_manager.py  summarization_manager.py
summitassistant-agent/tests/: __init__.py  integration_test.py
summitassistant-agent/tests/property/: __init__.py
summitassistant-agent/tests/unit/: __init__.py  test_main.py
weather-agent/: Dockerfile  README.md  requirements.txt  summitassistant-agent.py
weather-mcp-server/: Dockerfile  README.md  main.py  requirements.txt
(+3 files in other folders)
